update bug create transaction
